--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,10 @@ body {
   text-align: center;
 }
 
+.score::before {
+  content: "Score: ";
+}
+
 /*================================================
   
   Stage
