--- a/src/styles.css
+++ b/src/styles.css
@@ -138,3 +138,44 @@ body {
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.6);
   transition-duration: 0ms;
 }
+
+/*================================================
+
+Scoreboard
+
+================================================*/
+
+.board {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 5px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  z-index: 20;
+}
+
+.sbItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  text-align: center;
+  min-width: 50vw;
+}
+
+.sbItem span {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.startBtn {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+}
