--- a/src/styles.css
+++ b/src/styles.css
@@ -214,7 +214,10 @@ Scoreboard
   bottom: .5rem;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 20;
 }
+
+
 
 #left, #right {
   padding: 0.5rem;
@@ -223,12 +226,32 @@ Scoreboard
   border: none;
   border-radius: 10px;
   padding: 0.5rem;
+  z-index: 25;
 }
 
 .h-6 {
-  height: 1.5rem;
+  height: 15vh;
 }
 
 .w-6 {
-  width: 1.5rem;
+  width: 15vh;
+}
+
+@media screen and (min-width: 900px) {
+  .controls {
+    top: 50%;
+    left: 0;
+    width: 100%;
+    transform: translateY(-50%);
+  }
+  #left {
+    position: absolute;
+    left: 0;
+    margin-left: 1rem;
+  }
+  #right {
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+  }
 }
