--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ body {
 
 .score {
   color: rgba(255, 255, 255, 0.5);
-  font-size: 16px;
+  font-size: 2.5rem;
   font-weight: bold;
   padding-top: 5px;
   text-align: center;
@@ -53,6 +53,7 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
+  /* margin-bottom: 15vh; */
   position: absolute;
   right: 0;
   top: 0;
@@ -208,13 +209,13 @@ Scoreboard
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin: 1rem;
   position: absolute;
-  bottom: .5rem;
-  left: 50%;
-  transform: translateX(-50%);
+   bottom: .5rem;
+  /* left: 50%;
+  transform: translateX(-50%); */
   z-index: 20;
+  width: calc(100% - 2rem);
 }
 
 
@@ -230,11 +231,11 @@ Scoreboard
 }
 
 .h-6 {
-  height: 15vh;
+  height: 10vh;
 }
 
 .w-6 {
-  width: 15vh;
+  width: 10vh;
 }
 
 @media screen and (min-width: 900px) {
