no margin on body

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ body {
   color: #fff;
   font: 100%/1.5 sans-serif;
   overflow: hidden;
+  margin: 0;
 }
 
 /*================================================
