--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,10 @@ Scoreboard
   position: relative;
   /* width: 100%; */
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .board {
@@ -161,10 +165,10 @@ Scoreboard
   margin: auto;
   padding: 5px;
   text-align: center;
-  position: absolute;
+  /* position: absolute;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 50%; 
+  transform: translate(-50%, -50%); */
   list-style: none;
   z-index: 20;
   height: 50vh;
@@ -186,6 +190,7 @@ Scoreboard
   text-align: center;
   min-width: 50vw;
   max-width: 95vw;
+  margin-bottom: 0.125rem;
 }
 
 .sbItem span {
@@ -220,20 +225,21 @@ Scoreboard
   color: #fff;
   border: none;
   border-radius: 10px;
-  position: fixed;
+  z-index: 25;
+  /* position: fixed;
   bottom: .5rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
 }
 
 .header {
   font-size: 2.5rem;
   font-weight: bold;
   display: block;
-  position: absolute;
+  /* position: absolute;
   top: 0.5rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
   z-index: 15;
 }
 
