remove score label

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,9 +40,9 @@ body {
   text-align: center;
 }
 
-.score::before {
+/* .score::before {
   content: "Score: ";
-}
+} */
 
 /*================================================
   
