--- a/src/styles.css
+++ b/src/styles.css
@@ -299,4 +299,10 @@ Scoreboard
     right: 0;
     margin-right: 1rem;
   }
+  .boardContainer{
+    font-size: 2.5rem;
+  }
+  .header{
+    font-size: 8rem;
+  }
 }
