--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ General
   box-sizing: border-box;
 }
 
-html{
+html {
   background-color: #000;
   height: 100%;
 }
@@ -142,7 +142,7 @@ Scoreboard
 
 ================================================*/
 
-.boardContainer{
+.boardContainer {
   position: relative;
   height: 100vh;
   display: flex;
@@ -161,7 +161,7 @@ Scoreboard
   overflow-y: auto;
 }
 
-.board:first-child{
+.board:first-child {
   margin-top: 0.5rem;
 }
 
@@ -184,7 +184,7 @@ Scoreboard
   padding-right: 0.25rem;
 }
 
-.place{
+.place {
   text-align: right;
   min-width: 2rem;
 }
@@ -198,7 +198,7 @@ Scoreboard
   text-align: left;
 }
 
-.playerScore{
+.playerScore {
   text-align: center;
   min-width: 2rem;
 }
@@ -223,7 +223,7 @@ Scoreboard
 }
 
 .current {
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .controls {
@@ -232,15 +232,13 @@ Scoreboard
   justify-content: space-between;
   align-items: center;
   position: absolute;
-   bottom: .5rem;
+  bottom: 0.5rem;
   z-index: 20;
   width: 100%;
 }
 
-
-
-#left, #right {
-  /* background: rgba(0, 0, 0, 0.5); */
+#left,
+#right {
   background: none;
   color: #fff;
   border: none;
@@ -249,6 +247,7 @@ Scoreboard
   z-index: 25;
   margin-left: 2rem;
   margin-right: 2rem;
+  transform: scale(1, 1);
 }
 
 .h-6 {
@@ -276,10 +275,10 @@ Scoreboard
     right: 0;
     margin-right: 1rem;
   }
-  .boardContainer{
+  .boardContainer {
     font-size: 2.5rem;
   }
-  .header{
+  .header {
     font-size: 4rem;
   }
 }
