--- a/src/styles.css
+++ b/src/styles.css
@@ -241,8 +241,8 @@ Scoreboard
 #right {
   background: none;
   color: #fff;
-  border: none;
-  border-radius: 10px;
+  border: 4px solid #fff;
+  border-radius: 999px;
   padding: 0.5rem;
   z-index: 25;
   margin-left: 2rem;
